Fri Jul 16 22:13:14 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/TAO_Internal.cpp:

          Detect and allow an ENOENT error returned from opening a service
          configuration context. That is alright because any explicitly named
          service config files are checked for existence when the -ORBSvcConf
          argument is processed, so the only file that could raise ENOENT is
          a defaulted svc.conf. 
        
Thu Jul 15 13:37:06 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp(end_server_header):

          Changes to avoid a mismatched versioned namespace macro
          pair in *S.h when the -SS option is used.

Thu Jul 15 12:55:54 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/executor_ami_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:

          Added code generation for _get_component() and
          _set_component) in the AMI4CCM connector's facet executor,
          as well as code to initialize and reset this value in
          the corresponding connector executor.

Thu Jul 15 09:44:25 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/connector_ami_rh_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_ami_rh_exh.cpp:
        * TAO_IDL/be_include/be_visitor_connector/connector_ami_rh_exs.h:
        * TAO_IDL/be_include/be_visitor_connector/connector_ami_rh_exh.h:

          New visitors, generating the AMI4CCM reply handler
          implementation, with empty method bodies, and triggered by
          -Gex used on the generated *A.idl file. The option -Gcn
          used on this file will generate a *A_conn.{h,cpp} set
          of files. The addition of -Gex to this command line
          will trigger the generation of a *A_conn_i.{h,cpp}
          set of files, containing the corresponding empty